--- a/views/Add_New_Election.ejs
+++ b/views/Add_New_Election.ejs
@@ -12,8 +12,6 @@
 <body>
   <div id="wrapper">
     <section id="left-sidebar">
-      <h2>Selamat Datang, [Nama Pengguna].</h2>
-      
       <%- include('nav-link/sidebar'); %>
     </section>
     <div class="container">
@@ -30,9 +28,17 @@
         <label for="end-date">End Date:</label>
         <input type="datetime-local" id="enddate" name="enddate" required>
     
+        <!-- ... (Bagian HTML lainnya) ... -->
+
         <label for="invite-input">Undang Pengguna:</label>
-        <input type="text" id="inviteinput" name="inviteinput" placeholder="Masukkan email" required>
-       
+        <textarea id="inviteinput" name="inviteinput" placeholder="Masukkan email, pisahkan dengan baris baru" required></textarea>
+
+        <label for="candidates">Pilihan/Kandidat:</label>
+        <textarea id="candidates" name="candidates" placeholder="Masukkan nama kandidat, pisahkan dengan baris baru" required></textarea>
+
+        <!-- ... (Bagian HTML lainnya) ... -->
+
+
         <p class="alert" id="notif"><%= errorMsg %></p>
         
         <button onclick="Add_New_Election()">Send Request</button>
