--- a/views/nav-link/sidebar.ejs
+++ b/views/nav-link/sidebar.ejs
@@ -1,6 +1,9 @@
 <h2>Selamat Datang, <%= nama %></h2>
 <div class="links-container" id="sidebar">
   <a href="/dashboard-user" class="menu-routing">Dashboard</a>
-  <a href="/add_new_election" class="menu-routing">Create a pool</a>
+  <a href="/add_new_election" class="menu-routing">Create New Election</a>
   <a href="/result" class="menu-routing">Result</a>
+  <a href="/logout" class="menu-routing">
+    <span class="material-symbols-rounded"></span>Log Out
+  </a>
 </div>
